# Android-Il2Cpp-Resolver-Template

./: CMakeLists.txt  README.md
App/: main.cpp  main.h
App/Dobby/: Dobby.h
App/ImGUI/: imgui_impl_android.cpp  imgui_impl_android.h
App/Resolver/: IL2CPP_Resolver.hpp
App/Utils/: Logger.h
